--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ dependencies = [
     "pandas>=2.3.1",
     "requests>=2.32.4",
     "ruff>=0.12.8",
+    "setuptools>=80.9.0",
+    "ta-lib>=0.6.5",
     "uvicorn>=0.35.0",
     "websockets>=12.0",
 ]
